--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "nodemon": "^1.19.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
