--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^1.19.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
